# single-nucleus-nmr

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  tree.txt
A_Preprocessing/: 01_sequencing_metrics.ipynb  02_cellbender_qc.ipynb  03_preprocessing.ipynb
A_Preprocessing/orthology/: 01_make_orthology_map.ipynb  02_othology_reference.ipynb
B1_Optimization/: 02_recursive_subclustering.ipynb
B2_Annotation/CADuMS/: CADuMS.ipynb
B2_Annotation/CellTrain/: final_ann.ipynb
B2_Annotation/gseapy/: gsea_ann.ipynb
B_Pipeline/: 01_classic_processing.ipynb  02_optimal_processing.ipynb  03_join_clusters_and_annotations.ipynb
C_Optimization/: subcluster copy.ipynb
C_Refinement/: 06_check_refined_annotations.ipynb  manual_annotation_all_regions.csv
D_Annotation/CADuMS/: CADuMS.ipynb
D_Annotation/XSLT/: 1_main_preprocessing.ipynb
D_Annotation/gseapy/: gsea_ann.ipynb
Z_Archive/seurat/: all_in_one.R  analysis.r  another_similarity_code.R  careful_analysis.R  cell_identification.R  cell_markers.R  cluster_specific_gsea_results1.csv  clustering_data.R  clustering_qc.R  convert_to_loom.R  doublet_filtering.R  find_means.R  full_session_log_12-04-2025.txt  gsea_results.csv  mixed_tf_genes.txt  ploting_functions.R  post_analysis.r  ratopin_functions.R  soupXdenoise.R  tf_genes.txt  (+1 more)
envs/: cellbender-env.yml  scanpy-env.yml
results/: cellranger_metrics.csv
scripts/: adaptive_clustering.py  annotation_tools.py  functions_list.md  plot_functions.py  preprocessing_tools.py  run_cellbender.sh  run_cellranger.sh  run_fastqc.sh  sample_list_cellranger.tsv
(+4 files in other folders)
