[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "single_nucleus_nmr"
version = "0.1.0"
description = "Analysis pipeline for single-nucleus RNA-seq for NMR"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}
packages = ["scripts"]